:bugfix: add sections overflow-x hidden

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -51,3 +51,6 @@ a{
 	text-decoration: none;
 	color: white;
 }
+section{
+	overflow-x: hidden;
+}
